--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,14 @@
-.env
+.venv/
+models/__pycache__/
+routes/__pycache__/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pyw
+*.pyz
+*.pywz
+*.pyzz
+*.pywzz
+*.pyzzz
+*.pywzzz
